fix: update footer color for dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -182,6 +182,9 @@ footer {
   letter-spacing: 2px;
   margin: 16px;
 }
+.night footer {
+  color: var(--light-grey1);
+}
 
 /* Card
 ------ */
